documento del servicio de paquetes contrados
